# pulumi-resource-gcpx

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml  schema.json
.github/workflows/: benchmark.yml  ci.yml  fuzz.yml  release.yml  security.yml
benches/: resolver_bench.rs  scanner_bench.rs  workflow_bench.rs
examples/gcpx-customer-datamart/: Pulumi.dev.yaml  Pulumi.yaml
examples/gcpx-customer-datamart/sql/: cents_to_dollars.sql  dim_customers.sql  fct_orders.sql  stg_customers.sql  stg_orders.sql
examples/gcpx-dataproc-ingest/: Pulumi.dev.yaml  Pulumi.yaml
examples/gcpx-dbt-incremental/: Pulumi.dev.yaml  Pulumi.yaml
examples/gcpx-dbt-incremental/sql/: daily_events.sql
examples/gcpx-dbt-model-crud/: Pulumi.dev.yaml  Pulumi.yaml
examples/gcpx-dbt-multi-sql/: Pulumi.dbt.yaml  Pulumi.dev.yaml  Pulumi.models.yaml  Pulumi.test-init.yaml  Pulumi.yaml
examples/gcpx-dbt-multi-sql/sql/: mart_revenue.sql  stg_orders.sql  stg_users.sql
examples/gcpx-dbt-multifile/: Pulumi.dbt.yaml  Pulumi.dev.yaml  Pulumi.models.yaml  Pulumi.yaml
examples/gcpx-dbt-ref-chain/: Pulumi.dbt.yaml  Pulumi.dev.yaml  Pulumi.models.yaml  Pulumi.yaml
examples/gcpx-dbt-ref-chain/sql/: int_enriched.sql  int_joined.sql  mart_revenue.sql  safe_divide.sql  stg_orders.sql  stg_users.sql
examples/gcpx-full-e2e/: Pulumi.dbt.yaml  Pulumi.dev.yaml  Pulumi.models.yaml  Pulumi.scheduler.yaml  Pulumi.tables.yaml  Pulumi.yaml
examples/gcpx-full-e2e/sql/: cents_to_dollars.sql  mart_revenue.sql  stg_orders.sql  stg_users.sql
examples/gcpx-full-pipeline/: Pulumi.dev.yaml  Pulumi.yaml
examples/gcpx-gcp-compat/: Pulumi.dev.yaml  Pulumi.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_iter.rs  fuzz_database_type.rs  fuzz_dataproc_workflow.rs  fuzz_expand_macros.rs  fuzz_normalize_type.rs  fuzz_preprocess.rs  fuzz_resolve.rs  fuzz_scanner.rs  fuzz_snapshot_ddl.rs  fuzz_snapshot_workflow.rs  fuzz_workflow_yaml.rs
python/: build_binary.sh  pyproject.toml
python/python/pulumi_resource_gcpx/: __init__.py  _find_binary.py  cli.py
python/tests/: test_binary.py
src/: bq.rs  circuit_breaker.rs  diff_macro.rs  error.rs  gcp_client.rs  handler_util.rs  integration_tests.rs  json_body.rs  lib.rs  lifecycle.rs  main.rs  output.rs  prost_util.rs  provider.rs  resource.rs  sanitize.rs  scheduler_ops.rs  token_source.rs
src/dataproc/: export.rs  ingest.rs  job_lifecycle.rs  mod.rs  parse.rs  scheduler_body.rs  types.rs  workflow_template.rs
src/dataset/: api_body.rs  diff.rs  handlers.rs  parse.rs  types.rs  validate.rs
src/dbt/: handlers.rs  macros.rs  mod.rs  options.rs  parse.rs  preprocess.rs  resolver.rs  scanner.rs  types.rs  validate.rs
src/routine/: api_body.rs  diff.rs  handlers.rs  mod.rs  parse.rs  types.rs  validate.rs
src/scheduler/: handlers.rs  mod.rs  parse.rs  types.rs  workflow_template.rs
src/schema/: ddl.rs  diff.rs  drift.rs  handlers.rs  mod.rs  parse.rs  types.rs  validate.rs
src/snapshot/: ddl.rs  handlers.rs  mod.rs  parse.rs  types.rs  workflow.rs
src/table/: api_body.rs  diff.rs  handlers.rs  parse.rs  types.rs  validate.rs
tests/: e2e_schema_evolution.sh  gcp_integration.rs
