[package]
name = "pulumi-resource-gcpx"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["terekete <spicyzhug@gmail.com>"]

[[bin]]
name = "pulumi-resource-gcpx"
path = "src/main.rs"

[lib]
name = "pulumi_resource_gcpx"
path = "src/lib.rs"

[dependencies]
pulumi-rs-yaml-proto = { path = "../pulumi-rs-yaml/crates/pulumi-rs-yaml-proto" }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
gcp_auth = "0.12"
thiserror = "2"
memchr = "2"
base64 = "0.22"
bytes = "1"
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "test-util"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
scopeguard = "1"

[[bench]]
name = "scanner_bench"
harness = false

[[bench]]
name = "resolver_bench"
harness = false

[[bench]]
name = "workflow_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
