[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulumi-resource-gcpx"
version = "0.1.0"
description = "Pulumi resource provider for extended GCP management: BigQuery schema evolution, dbt-style SQL models, and scheduled execution"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "terekete", email = "spicyzhug@gmail.com"},
]
dependencies = [
    "pulumi>=3.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
pulumi-resource-gcpx = "pulumi_resource_gcpx.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
pulumi_resource_gcpx = ["bin/*"]
